--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green World - Togehter for a Greener World</title>
+    <!-- CSS & Logo -->
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="icon" type="image/x-icon" href="./img/logo_compressed.png">
     <!-- Bootstrap & Data Table -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap5.min.css">
@@ -16,16 +19,12 @@
     <script src="//cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
     <script src="//cdn.datatables.net/1.13.1/js/dataTables.bootstrap5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <!-- CSS & Logo -->
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link rel="icon" type="image/x-icon" href="./img/logo_compressed.png">
-
   </head>
   <body>
     <!-- Header -->
     <header>
     <!-- Navigation Menu -->
-      <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+      <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="img/logo.svg" alt="Logo" width="50" height="50" class="d-inline-block"> Green World </a>
@@ -340,11 +339,11 @@
           <div class="row text-md-left">
             <div class="col-6 col-md-3 col-lg-3 col-xl-3 mx-auto mb-3">
               <h5 class="text-uppercase mb-4 font-weight-bold">Contact</h5>
-                <ul class="list-unstyled">
-                  <li class="mb-2"><i class="fa fa-home"> Berlin, Germany</i></li>
-                  <li class="mb-2"><i class="fa fa-envelope"> info@gw.org</i></li>
-                  <li class="mb-2"><i class="fa fa-phone text-decoration-none"> +49 30 89 030</i></li>
-                </ul>
+              <ul class="list-unstyled">
+                <li class="mb-2"><i class="fa fa-home"></i> Berlin, Germany</li>
+                <li class="mb-2"><i class="fa fa-envelope"></i> info@gw.org</li>
+                <li class="mb-2"><i class="fa fa-phone text-decoration-none"></i> +49 30 89 030</li>
+              </ul>
             </div>
           </div>
         </section>
