improved footer design

--- a/index.html
+++ b/index.html
@@ -332,10 +332,10 @@
     </main>
 
     <!-- Footer -->
-    <footer id="footer">
+    <footer>
       <!-- Contact -->
-      <section class="bg-dark text-white pt-5 mt-5">
-        <section class="container py-4 py-md-5 px-4 px-md-3">
+      <section class="bg-dark text-white pt-4 mt-4">
+        <section class="container py-2 px-4 px-md-3">
           <div class="row text-md-left">
             <div class="col-6 col-md-3 col-lg-3 col-xl-3 mx-auto mb-3">
               <h5 class="text-uppercase mb-4 font-weight-bold">Contact</h5>
@@ -350,7 +350,7 @@
       </section>
 
       <section class="bg-dark text-center text-white">
-        <div class="container p-4">
+        <div class="container p-2">
           <!-- Section: Social media -->
           <section class="mb-4">
             <!-- Facebook -->
@@ -376,7 +376,7 @@
         </div>
 
         <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
           © 2023 Copyright:
           <a class="text-white" href="https://greenworld.com/">greenworld.com</a>
         </div>
