Increased padding to navbar

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     
     <!-- Main Content -->
     <main>
-      <section id="mission">
+      <section id="mission" class="pt-2">
         <img class="img-fluid mx-auto d-block" src="img/natur.jpg" alt="Nature">
         <div class="h1 text-center">Our Mission</div>
         <p class="text-center text-break fs-4">Founded more than two years ago, our non-profit organization was created to help both individuals and businesses adopt more environmentally sustainable practices. Our mission is to reduce the collective CO2 footprints of organizations of all sizes by providing easy access to accurate and up-to-date data on their regional emissions output. We also strive to inform, educate, and inspire companies to become better stewards of the environment. To this end, we have developed innovative tools and platforms that enable companies to track their emissions levels accurately over time, allowing them to better evaluate and understand their eco footprint, so they can make positive changes. Our team consists of highly qualified experts with a wide range of knowledge in environmental science, engineering, business strategy, data analytics and research methods who work together in a collaborative environment driven by ambition and passion for making the world a better place. </p>
