--- a/pages/contact.html
+++ b/pages/contact.html
@@ -53,7 +53,7 @@
     
     <!-- Main Content -->
     <main>
-      <section id="contact-text">
+      <section id="contact-text" class="pt-5">
         <div class="h1 text-center">Get in Touch</div>
         <p class="text-center text-break fs-4">
           We appreciate your interest in our environmental NGO and our mission to promote sustainable practices. If you have any questions, concerns, or suggestions, please don't hesitate to reach out to us through the contact form below. We value your input and will do our best to respond to your message as soon as possible.
