--- a/index copy.html
+++ b/index copy.html
@@ -3,24 +3,27 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green World - Together for a Greener World</title>
+    <title>Green World - Togehter for a Greener World</title>
     <!-- CSS & Logo -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" type="image/x-icon" href="./img/logo_compressed.png">
-    <!-- Bootstrap -->
+    <!-- Bootstrap & Data Table -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <!-- Google Fonts & Font Awesome -->
+    <!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap5.min.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <!-- jQuery & DataTables -->
+    
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
-    <!-- Custom JS -->
+    <!-- Javascript -->
     <script src="./js/app.js" defer></script>
+    <!-- Bootstrap & Data Table -->
+    <!-- <script src="//code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="//cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+    <script src="//cdn.datatables.net/1.13.1/js/dataTables.bootstrap5.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </head>
-
   <body>
     <!-- Header -->
     <header>
@@ -70,17 +73,259 @@
         <img class="img-fluid mx-auto d-block" src="img/meeresschildkroete.jpg" alt="Sea Turtle">
         <p class="text-center text-break fs-4">Without furder ado, let's dive into the interesting part: The data about the biggest companies of countries with the highest greenhouse gas emissions and their annual CO2 emissions.</p>
       </section>
-      <div class="h1 text-center pt-4">The Table</div>
-      <section id="table" class="pt-4 pb-5 px-md-5">
+      <div class="h1 text-center">The Table</div>
+      <section id="table">
         <article>
           <table id="co2" class="table table-striped" style="width:100%">
             <thead>
-                <tr>
-                    <th>Country</th>
-                    <th>Company</th>
-                    <th>Annual CO2 emissions (in t)</th>
-                </tr>
+              <tr>
+                <th>Country</th>
+                <th>Company</th>
+                <th>Annual CO2 emissions (in t)</th>
+              </tr>
             </thead>
+            <tbody>
+              <tr>
+                <td>Albania</td>
+                <td>Grecon</td>
+                <td>1843505</td>
+              </tr>
+              <tr>
+                <td>Albania</td>
+                <td>Rewo</td>
+                <td>4001334</td>
+              </tr>
+              <tr>
+                <td>Bermuda</td>
+                <td>Alpak</td>
+                <td>213297</td>
+              </tr>
+              <tr>
+                <td>Bermuda</td>
+                <td>Hiem</td>
+                <td>195470</td>
+              </tr>
+              <tr>
+                <td>Bhutan</td>
+                <td>Nioqp</td>
+                <td>2464</td>
+              </tr>
+              <tr>
+                <td>Bhutan</td>
+                <td>Feru</td>
+                <td>868412</td>
+              </tr>
+              <tr>
+                <td>Chile</td>
+                <td>Opao</td>
+                <td>8152414</td>
+              </tr>
+              <tr>
+                <td>Chile</td>
+                <td>Anqy</td>
+                <td>63502169</td>
+              </tr>
+              <tr>
+                <td>China</td>
+                <td>Choam</td>
+                <td>9431227812</td>
+              </tr>
+              <tr>
+                <td>China</td>
+                <td>Acme Corp</td>
+                <td>10003877188</td>
+              </tr>
+              <tr>
+                <td>Cuba</td>
+                <td>Sirius </td>
+                <td>12787483</td>
+              </tr>
+              <tr>
+                <td>Cuba</td>
+                <td>Cybernetics </td>
+                <td>14094633</td>
+              </tr>
+              <tr>
+                <td>Finland</td>
+                <td>MomCorp</td>
+                <td>731239</td>
+              </tr>
+              <tr>
+                <td>Finland</td>
+                <td>Rich Industries</td>
+                <td>29479657</td>
+              </tr>
+              <tr>
+                <td>France</td>
+                <td>Soylent Corp.</td>
+                <td>158519924</td>
+              </tr>
+              <tr>
+                <td>France</td>
+                <td>Frobozz Magic Co.</td>
+                <td>33672567</td>
+              </tr>
+              <tr>
+                <td>Germany</td>
+                <td>Warbucks Industries</td>
+                <td>336089298</td>
+              </tr>
+              <tr>
+                <td>Germany</td>
+                <td>Tyrell Corp.</td>
+                <td>316269625</td>
+              </tr>
+              <tr>
+                <td>Ghana</td>
+                <td>Wayne Enterprises</td>
+                <td>12103002</td>
+              </tr>
+              <tr>
+                <td>Ghana</td>
+                <td>Virtucon</td>
+                <td>3024230</td>
+              </tr>
+              <tr>
+                <td>Liechtenstein</td>
+                <td>Globex</td>
+                <td>27411</td>
+              </tr>
+              <tr>
+                <td>Liechtenstein</td>
+                <td>Umbrella Corp.</td>
+                <td>15403</td>
+              </tr>
+              <tr>
+                <td>Lithuania</td>
+                <td>Wonka Industries</td>
+                <td>8257807</td>
+              </tr>
+              <tr>
+                <td>Lithuania</td>
+                <td>Stark Industries</td>
+                <td>3358560</td>
+              </tr>
+              <tr>
+                <td>Luxembourg</td>
+                <td>Clampett Oil</td>
+                <td>4043975</td>
+              </tr>
+              <tr>
+                <td>Luxembourg</td>
+                <td>Oceanic Airlines</td>
+                <td>7779714</td>
+              </tr>
+              <tr>
+                <td>Macao</td>
+                <td>Yoyodyne</td>
+                <td>984474</td>
+              </tr>
+              <tr>
+                <td>Macao</td>
+                <td>Propulsion Sys.</td>
+                <td>180316</td>
+              </tr>
+              <tr>
+                <td>Namibia</td>
+                <td>Cyberdyne</td>
+                <td>3352456</td>
+              </tr>
+              <tr>
+                <td>Namibia</td>
+                <td>Systems Corp.</td>
+                <td>1025373</td>
+              </tr>
+              <tr>
+                <td>Nigeria</td>
+                <td>Danconia Copper</td>
+                <td>95264656</td>
+              </tr>
+              <tr>
+                <td>Nigeria</td>
+                <td>Gringotta</td>
+                <td>105453306</td>
+              </tr>
+              <tr>
+                <td>Portugal</td>
+                <td>Oscorp</td>
+                <td>5144691</td>
+              </tr>
+              <tr>
+                <td>Portugal</td>
+                <td>Nakatomi</td>
+                <td>1769340</td>
+              </tr>
+              <tr>
+                <td>Spain</td>
+                <td>Trading Corp</td>
+                <td>87789611</td>
+              </tr>
+              <tr>
+                <td>Spain</td>
+                <td>Spacely</td>
+                <td>31974040</td>
+              </tr>
+              <tr>
+                <td>Sweden</td>
+                <td>Space Industries</td>
+                <td>20507139</td>
+              </tr>
+              <tr>
+                <td>Sweden</td>
+                <td>Sprockets Co.</td>
+                <td>16766576</td>
+              </tr>
+              <tr>
+                <td>Switzerland</td>
+                <td>Money Industries</td>
+                <td>21514726</td>
+              </tr>
+              <tr>
+                <td>Switzerland</td>
+                <td>Evil Corp.</td>
+                <td>31967737</td>
+              </tr>
+              <tr>
+                <td>Ukraine</td>
+                <td>Bottogo</td>
+                <td>163562356</td>
+              </tr>
+              <tr>
+                <td>Ukraine</td>
+                <td>Venetia Co.</td>
+                <td>98697214</td>
+              </tr>
+              <tr>
+                <td>United Arab Emirates</td>
+                <td>Oil Giant</td>
+                <td>106082338</td>
+              </tr>
+              <tr>
+                <td>United Arab Emirates</td>
+                <td>United Oil</td>
+                <td>35867604</td>
+              </tr>
+              <tr>
+                <td>United Kingdom</td>
+                <td>Arts Ltd.</td>
+                <td>265938262</td>
+              </tr>
+              <tr>
+                <td>United Kingdom</td>
+                <td>Banking Group</td>
+                <td>779408</td>
+              </tr>
+              <tr>
+                <td>United States</td>
+                <td>Very Big Corp. Of America</td>
+                <td>830410295</td>
+              </tr>
+              <tr>
+                <td>United States</td>
+                <td>Dieselmotors Co.</td>
+                <td>4317396080</td>
+              </tr>
+            </tbody>
           </table>
         </article>
       </section>
