--- a/pages/climate-history.html
+++ b/pages/climate-history.html
@@ -51,7 +51,7 @@
     
     <!-- Main Content -->
     <main class="container">
-      <section class="my-5 pt-5">
+      <section class="pt-5">
           <h1>Climate Change Background & History</h1>
           <p>Climate change refers to the long-term shifts in global temperature, precipitation, and other climate patterns. Over Earth's history, climate has changed many times, but the rapid warming we're experiencing today is unprecedented.</p>
       </section>
@@ -138,8 +138,8 @@
     <!-- Footer -->
     <footer>
       <!-- Contact -->
-      <section class="bg-dark text-white pt-4 mt-4">
-        <section class="container py-2 px-4 px-md-3">
+      <section class="bg-dark text-white pt-4">
+        <section class="container py-1 px-4 ">
           <div class="row text-md-left">
             <div class="col-6 col-md-3 col-lg-3 col-xl-3 mx-auto mb-3">
               <h5 class="text-uppercase mb-4 font-weight-bold">Contact</h5>
