additional padding for texts

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
     <main>
       <section id="mission" class="pt-2">
         <img class="img-fluid mx-auto d-block" src="img/natur.jpg" alt="Nature">
-        <div class="h1 text-center">Our Mission</div>
-        <p class="text-center text-break fs-4">Founded more than two years ago, our non-profit organization was created to help both individuals and businesses adopt more environmentally sustainable practices. Our mission is to reduce the collective CO2 footprints of organizations of all sizes by providing easy access to accurate and up-to-date data on their regional emissions output. We also strive to inform, educate, and inspire companies to become better stewards of the environment. To this end, we have developed innovative tools and platforms that enable companies to track their emissions levels accurately over time, allowing them to better evaluate and understand their eco footprint, so they can make positive changes. Our team consists of highly qualified experts with a wide range of knowledge in environmental science, engineering, business strategy, data analytics and research methods who work together in a collaborative environment driven by ambition and passion for making the world a better place. </p>
-        <p class="text-center text-break fs-4">We are constantly looking for new opportunities to drive innovation and create meaningful relationships with organizations from all sectors, as well as engaging them in discussions about global warming prevention initiatives. As part of our commitment to corporate social responsibility, we also offer educational programs for employees from various industries which focus on understanding climate change trends, reducing personal carbon footprints, best practices for green living, renewable energy sources and more.</p>
+        <div class="h1 text-center pt-4">Our Mission</div>
+        <p class="text-center text-break px-md-5 fs-4">Founded more than two years ago, our non-profit organization was created to help both individuals and businesses adopt more environmentally sustainable practices. Our mission is to reduce the collective CO2 footprints of organizations of all sizes by providing easy access to accurate and up-to-date data on their regional emissions output. We also strive to inform, educate, and inspire companies to become better stewards of the environment. To this end, we have developed innovative tools and platforms that enable companies to track their emissions levels accurately over time, allowing them to better evaluate and understand their eco footprint, so they can make positive changes. Our team consists of highly qualified experts with a wide range of knowledge in environmental science, engineering, business strategy, data analytics and research methods who work together in a collaborative environment driven by ambition and passion for making the world a better place. </p>
+        <p class="text-center text-break pb-3 px-md-5 fs-4">We are constantly looking for new opportunities to drive innovation and create meaningful relationships with organizations from all sectors, as well as engaging them in discussions about global warming prevention initiatives. As part of our commitment to corporate social responsibility, we also offer educational programs for employees from various industries which focus on understanding climate change trends, reducing personal carbon footprints, best practices for green living, renewable energy sources and more.</p>
         <img class="img-fluid mx-auto d-block" src="img/meeresschildkroete.jpg" alt="Sea Turtle">
-        <p class="text-center text-break fs-4">Without furder ado, let's dive into the interesting part: The data about the biggest companies of countries with the highest greenhouse gas emissions and their annual CO2 emissions.</p>
+        <p class="text-center text-break py-4 px-md-5 fs-4">Without furder ado, let's dive into the interesting part: The data about the biggest companies of countries with the highest greenhouse gas emissions and their annual CO2 emissions.</p>
       </section>
       <div class="h1 text-center pt-4">The Table</div>
       <section id="table" class="pt-4 pb-5 px-md-5">
@@ -86,12 +86,12 @@
       </section>
       <section>
         <img class="img-fluid mx-auto d-block" src="img/landschaft.jpg" alt="Landscape">
-        <p class="text-center text-break fs-4">We hope this data shed some light upon the worldwide greenhouse gas emissions. Let's all work together towards a sustainable future because this planet is worth fighting for!</p>
+        <p class="text-center text-break py-4 px-md-5 fs-4">We hope this data shed some light upon the worldwide greenhouse gas emissions. Let's all work together towards a sustainable future because this planet is worth fighting for!</p>
       </section>
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer id="footer">
       <!-- Contact -->
       <section class="bg-dark text-white pt-4 mt-4">
         <section class="container py-2 px-4 px-md-3">
