added paddings to texts

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -54,18 +54,18 @@
     <!-- Main Content -->
     <main>
       <section id="contact-text" class="pt-5">
-        <div class="h1 text-center">Get in Touch</div>
-        <p class="text-center text-break fs-4">
+        <div class="h1 text-center pb-3">Get in Touch</div>
+        <p class="text-center text-break px-md-5 fs-4">
           We appreciate your interest in our environmental NGO and our mission to promote sustainable practices. If you have any questions, concerns, or suggestions, please don't hesitate to reach out to us through the contact form below. We value your input and will do our best to respond to your message as soon as possible.
         </p>
-        <p class="text-center text-break fs-4">
+        <p class="text-center text-break px-md-5 fs-4">
           Your involvement and support are crucial in our journey towards a cleaner and more sustainable future. Together, we can make a difference and help preserve our planet for future generations.
         </p>
      </section>
       <!-- Contact Form -->
-      <div class="h1 text-center">Contact</div>
+      <div class="h1 text-center pt-5">Contact</div>
       <section id="contact-form">
-        <div class="container">
+        <div class="container pb-5">
                   <div class="row">
             <div class="col-md-8 offset-md-2">
               <form action="submit_form.php" method="post" id="contactForm">
