--- a/pages/climate-history.html
+++ b/pages/climate-history.html
@@ -50,7 +50,7 @@
     </header>
     
     <!-- Main Content -->
-    <main class="container">
+    <main class="container px-md-5">
       <section class="pt-5">
           <h1>Climate Change Background & History</h1>
           <p>Climate change refers to the long-term shifts in global temperature, precipitation, and other climate patterns. Over Earth's history, climate has changed many times, but the rapid warming we're experiencing today is unprecedented.</p>
