--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,22 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green World - Togehter for a Greener World</title>
-    <!-- CSS & Logo -->
+    <!-- CSS, Logo, Icons -->
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <link rel="icon" type="image/x-icon" href="../img/logo_compressed.png">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- Bootstrap & Data Table -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap5.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <!-- Javascript -->
-    <script src="./js/app.js" defer></script>
-    <!-- Bootstrap & Data Table -->
-    <script src="//code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="//cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
-    <script src="//cdn.datatables.net/1.13.1/js/dataTables.bootstrap5.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <!-- Google reCAPTCHA -->
     <script src="https://www.google.com/recaptcha/api.js?hl=en" async defer></script>
   </head>
@@ -91,8 +82,8 @@
         </div>
       </section>
       <section>
-        <img class="img-fluid mx-auto d-block" src="../img/landschaft.jpg" alt="Landscape">
-        <p class="text-center text-break fs-4">We hope this data shed some light upon the worldwide greenhouse gas emissions. Let's all work together towards a sustainable future because this planet is worth fighting for!</p>
+        <img class="img-fluid mx-auto d-block" src="../img/trees.jpg" alt="Landscape">
+        <p class="text-center text-break pt-2 fs-4">Thank you for keeping in touch and watching out for mother nature!</p>
       </section>
     </main>
 
