fix bugs and add text

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green World - Togehter for a Greener World</title>
+    <title>Green World - Together for a Greener World</title>
     <!-- CSS, Logo, Icons -->
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <link rel="icon" type="image/x-icon" href="../img/logo_compressed.png">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <!-- Bootstrap & Data Table -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
@@ -53,6 +55,27 @@
           Your involvement and support are crucial in our journey towards a cleaner and more sustainable future. Together, we can make a difference and help preserve our planet for future generations.
         </p>
      </section>
+     <!-- About Section -->
+    <section id="about-text" class="my-5 pt-5">
+        <div class="h2 text-center pb-3">About Us</div>
+        <p class="text-center text-break px-md-5 fs-4">Green World is a non-profit environmental organization committed to addressing the urgent issues of climate change and environmental degradation. Founded in 2023, we've made it our mission to promote sustainable practices, protect the environment, and educate the public about the impact of CO2 emissions. Our team consists of dedicated environmental scientists, educators, and activists spread across the globe, working tirelessly to create a greener, more sustainable world for future generations.</p>
+    </section>
+
+    <!-- Our Work Section -->
+    <section id="our-work-text" class="my-5 pt-5">
+        <div class="h2 text-center py-3">Our Work</div>
+        <p class="text-center text-break px-md-5 fs-4">Our initiatives are focused on three primary areas: Climate Change Advocacy, Environmental Protection, and Corporate Responsibility.</p>
+
+        <div class="h3 text-center py-3">Climate Change Advocacy</div>
+        <p class="text-center text-break px-md-5 fs-4">We actively campaign for stronger climate policies and increased investment in renewable energy. Through our advocacy work, we aim to influence decision-makers and drive systemic change to reduce global CO2 emissions.</p>
+
+        <div class="h3 text-center py-3">Environmental Protection</div>
+        <p class="text-center text-break px-md-5 fs-4">We undertake a range of projects to protect and restore our natural environment. This includes reforestation efforts, biodiversity conservation, and protecting endangered species. We believe in the importance of maintaining the health and vitality of our planet's ecosystems for the benefit of all life on Earth.</p>
+
+        <div class="h3 text-center py-3">Corporate Responsibility</div>
+        <p class="text-center text-break px-md-5 fs-4">We hold corporations accountable for their environmental impact. Through our Corporate Responsibility program, we encourage businesses to adopt sustainable practices, reduce their carbon footprint, and invest in green technologies. Our annual Green World Index ranks companies and countries based on their CO2 emissions, providing a transparent and accessible overview of their environmental impact.</p>
+    </section>
+
       <!-- Contact Form -->
       <div class="h1 text-center pt-5">Contact</div>
       <section id="contact-form">
@@ -82,7 +105,7 @@
         </div>
       </section>
       <section>
-        <img class="img-fluid mx-auto d-block" src="../img/trees.jpg" alt="Landscape">
+        <img class="img-fluid mx-auto d-block" src="../img/trees.jpg" alt="Landscape with two trees">
         <p class="text-center text-break pt-2 fs-4">Thank you for keeping in touch and watching out for mother nature!</p>
       </section>
     </main>
